
	* Fixed bug #11794: If website root is active, searching for links does not work

2011-01-05  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11797: linkvalidator saves translated texts in the database which is not good (thanks to Michael Miousse and Philipp Gampe)
	* Fixed bug #11802: Field linktitle often stays empty (thanks to Philipp Gampe)

2011-01-04  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11889: Clean up CSS

2011-01-03  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11866: When the edit pencil next to a link is clicked, you end up at tree root with search_levels=0 after saving
	* Followup to bug #10907: Invalid external url not detected (thanks to Philipp Gampe)

2011-01-02  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11821: Do not use abbreviations in code
	* Fixed bug #11777: Add CSH to table headers
	* Fixed bug #11848: Use labels for the table fields containing the broken links

2011-01-01  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11822: Add extension description in ext_emconf.php
	* Fixed bug #11820: Remove comments "End of function xy"
	* Fixed bug #11817: Use new documentation template for the manual
	* Fixed bug #11269: Proofread the manual
	* Fixed bug #11799: Improve usability of the linkvalidator interface
	* Fixed bug #11834: Do not show the table with the list of broken links, if there are no broken links
	* Fixed bug #11836: Make use of Flash Messages
	* Fixed bug #11819: Prevent PHP notices by fixing XClass inclusion code
	* Fixed bug #11823: Add @package and @subpackage to comment blocks

2010-12-31  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11776: URL/Linktarget for files is broken
	* Fixed bug #11800: Checkboxes showing the number of broken links do not display the value "zero"
	* Fixed bug #11803: Fix locallang files
	* Fixed bug #11801: Variable in the message "Page '' does not exist." will never be filled
	* Fixed bug #11798: Table displaying the number of broken links must be styled