@@ -6,6 +6,7 @@
 
 	* Fixed bug #11797: linkvalidator saves translated texts in the database which is not good (thanks to Michael Miousse and Philipp Gampe)
 	* Fixed bug #11802: Field linktitle often stays empty (thanks to Philipp Gampe)
+	* Followup to bug #11776: URL/Linktarget for files is broken
 
 2011-01-04  Christopher  <chrissitopher@gmx.de>
 
